【摘要】cabs api