@@ -1,76 +1,48 @@
 package com.cathaybk.demo.service.impl;
 
-import java.io.IOException;
-import java.sql.Timestamp;
-
 import com.cathaybk.demo.dto.ANNC001Tranrq;
 import com.cathaybk.demo.dto.EmptyTranrs;
-import com.cathaybk.demo.dto.RequestTemplate;
-import com.cathaybk.demo.dto.ResponseTemplate;
 import com.cathaybk.demo.entity.AnnouncementEntity;
 import com.cathaybk.demo.exception.RestException;
-import com.cathaybk.demo.factory.NormalResponseFactory;
-import com.cathaybk.demo.repository.AnnouncementRepository;
+import com.cathaybk.demo.repository.AnnouncementRepo;
 import com.cathaybk.demo.service.ANNC001Svc;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.stereotype.Service;
-
+import com.cathaybk.demo.user.UserObject;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import java.time.LocalDateTime;
 
 /**
  * CABS-B-ANNC001 新增公告
- *
  * @author
  */
+@RequiredArgsConstructor
 @Service
-@RequiredArgsConstructor(onConstructor = @__(@Autowired))
+@Transactional(rollbackFor = Exception.class)
 public class ANNC001SvcImpl implements ANNC001Svc {
 
-    /** NormalResponseFactory */
-    private final NormalResponseFactory normalRespFactory;
-
-    /** AnnouncementRepository */
-    private final AnnouncementRepository announcementRepository;
+    private final AnnouncementRepo announcementRepo;
+    private final UserObject userObject;
 
     @Override
-    public ResponseTemplate<EmptyTranrs> createAnnouncement(RequestTemplate<ANNC001Tranrq> req)
-            throws IOException, RestException {
+    public EmptyTranrs createAnnouncement(ANNC001Tranrq tranrq) throws RestException {
 
-        ANNC001Tranrq tranrq = req.getTranrq();
-
-        // STEP1: 取得登入者資訊
-        String currentUser = getCurrentUserName();
-        if (currentUser == null || currentUser.trim().isEmpty()) {
+        String empName = userObject.getEmpName();
+        if (empName == null || empName.isBlank()) {
             throw new RestException("E300", "未取得使用者資訊");
         }
 
-        // STEP2: 建立 ANNOUNCEMENT Entity
+        LocalDateTime now = LocalDateTime.now();
+
         AnnouncementEntity entity = new AnnouncementEntity();
         entity.setContent(tranrq.getContent());
-        entity.setCreatedBy(currentUser);
-        entity.setCreatedAt(new Timestamp(System.currentTimeMillis()));
-        entity.setUpdatedBy(currentUser);
-        entity.setUpdatedAt(new Timestamp(System.currentTimeMillis()));
+        entity.setCreatedBy(empName);
+        entity.setCreatedAt(now);
+        entity.setUpdatedBy(empName);
+        entity.setUpdatedAt(now);
 
-        // STEP3: JPA save
-        announcementRepository.save(entity);
+        announcementRepo.save(entity);
 
-        return normalRespFactory.genNormalResponse(new EmptyTranrs(), req);
-    }
-
-    /**
-     * 取得目前登入者姓名
-     *
-     * @return 登入者姓名
-     */
-    private String getCurrentUserName() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication != null && authentication.isAuthenticated()) {
-            return authentication.getName();
-        }
-        return null;
+        return new EmptyTranrs();
     }
 
 }
